# CppTrader

./: .appveyor.yml  .gitignore  .gitlinks  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  annotated.html  class_8cpp.html  class_8cpp_source.html  class_8h.html  class_8h_source.html  class_8inl.html  class_8inl_source.html  class_cpp_template_1_1_template-members.html  class_cpp_template_1_1_template.html  class_cpp_trader_1_1_fast_hash-members.html  class_cpp_trader_1_1_fast_hash.html  class_cpp_trader_1_1_i_t_c_h_1_1_i_t_c_h_handler-members.html  class_cpp_trader_1_1_i_t_c_h_1_1_i_t_c_h_handler.html  class_cpp_trader_1_1_market_handler-members.html  class_cpp_trader_1_1_market_handler.html  class_cpp_trader_1_1_market_manager-members.html  class_cpp_trader_1_1_market_manager.html  class_cpp_trader_1_1_matching_1_1_fast_hash-members.html  class_cpp_trader_1_1_matching_1_1_fast_hash.html  class_cpp_trader_1_1_matching_1_1_market_handler-members.html  class_cpp_trader_1_1_matching_1_1_market_handler.html  class_cpp_trader_1_1_matching_1_1_market_manager-members.html  class_cpp_trader_1_1_matching_1_1_market_manager.html  class_cpp_trader_1_1_matching_1_1_order_book-members.html  class_cpp_trader_1_1_matching_1_1_order_book.html  class_cpp_trader_1_1_order_book-members.html  class_cpp_trader_1_1_order_book.html  class_cpp_trader_1_1_order_manager-members.html  class_cpp_trader_1_1_order_manager.html  class_cpp_trader_1_1_symbol_manager-members.html  class_cpp_trader_1_1_symbol_manager.html  (+196 more)
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msys2.yml  doxygen.yml
documents/: Doxyfile
domain/: level.h  level.inl  order.h  order.inl  symbol.h  symbol.inl
examples/: itch_handler.cpp  market_manager.cpp  matching_engine.cpp
include/trader/: fast_hash.h  fast_hash.inl  level.h  level.inl  market_handler.h  market_manager.h  market_manager.inl  order.h  order.inl  order_book.h  order_book.inl  order_manager.h  order_manager.inl  symbol.h  symbol.inl  symbol_manager.h  symbol_manager.inl  update.h  update.inl  version.h
include/trader/matching/: errors.h  errors.inl  fast_hash.h  fast_hash.inl  level.h  level.inl  market_handler.h  market_manager.h  market_manager.inl  order.h  order.inl  order_book.h  order_book.inl  symbol.h  symbol.inl  update.h  update.inl
include/trader/providers/nasdaq/: itch_handler.h  itch_handler.inl
modules/: CMakeLists.txt
performance/: itch_handler.cpp  market_manager.cpp  market_manager_optimize.cpp  market_manager_optimize_aggressive.cpp  market_manager_optimized.cpp  market_manager_optimized_aggressive.cpp  matching_engine.cpp  matching_engine_optimized.cpp  template_class.cpp  template_function.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+66 more)
source/trader/: market_manager.cpp  order_book.cpp  order_manager.cpp  symbol_manager.cpp
source/trader/matching/: market_manager.cpp  order.cpp  order_book.cpp
source/trader/providers/nasdaq/: itch_handler.cpp
tests/: test_itch_handler.cpp  test_market_manager.cpp  test_matching_engine.cpp  test_order_manager.cpp  test_symbol_manager.cpp  test_template_class.cpp  test_template_function.cpp
thesis_docs/: presentation_GR.pptx
tools/matching/: scenario-01.txt  scenario-02.txt  scenario-03.txt  scenario-04.txt  scenario-05.txt  scenario-06.txt  scenario-07.txt  scenario-08.txt  scenario-09.txt  scenario-1.txt  scenario-10.txt  scenario-11.txt  scenario-12.txt  scenario-13.txt  scenario-14.txt  scenario-2.txt  scenario-3.txt  scenario-4.txt  scenario-5.txt  scenario-6.txt  scenario-7.txt
